Include share buttons

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -13,13 +13,14 @@
       {{ end }}
     </div>
 
-    {{ .Content }} {{ partial "share-buttons.html" . }}
+    {{ .Content }}
   </div>
   <div class="post-footer">
     <div class="info">
-      {{ with .Page.Params.Categories }}{{ partial "taxonomy/categories.html" .
-      }}{{ end }} {{ with .Page.Params.Tags }}{{ partial "taxonomy/tags.html" .
-      }}{{ end }}
+      {{ partial "share-buttons.html" . }}{{ end }} {{ with
+      .Page.Params.Categories }}{{ partial "taxonomy/categories.html" . }}{{ end
+      }} {{ with .Page.Params.Tags }}{{ partial "taxonomy/tags.html" . }}{{ end
+      }}
     </div>
   </div>
 
