--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,39 +1,37 @@
 @charset "UTF-8";
-:root{
-  --bg-color:#fff;
-  --secondary-bg-color:#eeeeee;
+:root {
+  --bg-color: #fff;
+  --secondary-bg-color: #eeeeee;
   --heading-color: #5f5f5f;
   --body-color: rgba(0, 0, 0, 0.7);
   --post-color: rgba(0, 0, 0, 0.44);
   --border-color: rgba(0, 0, 0, 0.15);
   --pre-bg-color: #f9f9fd;
-  --nav-text-color:#5a5a5a;
+  --nav-text-color: #5a5a5a;
   --tag-color: #424242;
   scroll-padding-top: 100px;
 }
 
-html[data-theme='dark'] {
-  --bg-color:#292a2d;
-  --secondary-bg-color:rgb(119, 119, 122);
-  --heading-color: rgb(169,169,179);
-  --body-color:rgb(169,169,179);
+html[data-theme="dark"] {
+  --bg-color: #292a2d;
+  --secondary-bg-color: rgb(119, 119, 122);
+  --heading-color: rgb(169, 169, 179);
+  --body-color: rgb(169, 169, 179);
   --post-color: rgba(0, 0, 0, 0.44);
   --border-color: rgb(38, 38, 38);
-  --pre-bg-color:rgb(33,33,45);
-  --nav-text-color:rgb(191, 191, 191);
+  --pre-bg-color: rgb(33, 33, 45);
+  --nav-text-color: rgb(191, 191, 191);
   --tag-color: rgb(191, 191, 191);
-  
 }
 
 html {
   background-color: var(--bg-color);
   -webkit-font-smoothing: antialiased;
-  
 }
 
 body {
   color: var(--body-color);
-  font-family: 'Verdana', sans-serif;
+  font-family: "Verdana", sans-serif;
   font-size: 15px;
   width: 100%;
   margin: 0 auto 30px auto;
@@ -50,7 +48,6 @@ a {
   text-decoration: none;
 }
 
-
 .category {
   padding: 4px 6px;
   border-radius: 3px;
@@ -61,10 +58,11 @@ a {
 
 .tag::before {
   content: "#";
-  opacity: .5;
+  opacity: 0.5;
 }
 
-.tag, .category {
+.tag,
+.category {
   display: inline-block;
   font-size: 15px;
   line-height: 1;
@@ -78,17 +76,19 @@ pre {
   overflow-x: auto;
 }
 
-.info i{
+.info i {
   opacity: 0.5;
   margin-right: 5px;
 }
 
-a:link, a:visited {
+a:link,
+a:visited {
   opacity: 1;
   color: var(--tag-color);
 }
 
-a:hover, a:active {
+a:hover,
+a:active {
   color: #2660ab;
 }
 
@@ -96,7 +96,7 @@ a:hover, a:active {
 /*animation starts*/
 
 .animated {
-  transition: top .8s linear;
+  transition: top 0.8s linear;
   -webkit-animation-duration: 1s;
   -moz-animation-duration: 1s;
   -ms-animation-duration: 1s;
@@ -323,7 +323,7 @@ a:hover, a:active {
   color: #2660ab;
 }
 .post .post-content a:hover {
-  color: #2F69B3;
+  color: #2f69b3;
 }
 .post .post-content h3 {
   font-size: 22px;
@@ -459,7 +459,7 @@ a:hover, a:active {
   padding-bottom: 20px;
 }
 .footer a {
-  color: #A6A6A6;
+  color: #a6a6a6;
 }
 .footer a:hover {
   color: #2660ab;
@@ -493,10 +493,10 @@ a:hover, a:active {
 }
 .list-with-title .listing .listing-post .post-time {
   float: right;
-  color: #C5C5C5;
+  color: #c5c5c5;
 }
 .list-with-title .listing .listing-post a {
-  color: #8F8F8F;
+  color: #8f8f8f;
 }
 .list-with-title .listing .listing-post a:hover {
   color: #2660ab;
@@ -512,7 +512,7 @@ a:hover, a:active {
   width: 32px;
   height: 32px;
   border-radius: 300px;
-  background-color: #3E3E3E;
+  background-color: #3e3e3e;
   margin-right: 5px;
 }
 .evernote a {
@@ -521,7 +521,7 @@ a:hover, a:active {
   font-size: 12px;
 }
 .evernote a:hover {
-  color: #ED6243;
+  color: #ed6243;
   padding: 11px;
 }
 
@@ -529,7 +529,7 @@ a:hover, a:active {
   width: 32px;
   height: 32px;
   border-radius: 300px;
-  background-color: #ED6243;
+  background-color: #ed6243;
   margin-right: 5px;
 }
 .weibo a {
@@ -537,14 +537,14 @@ a:hover, a:active {
   padding: 9px;
 }
 .weibo a:hover {
-  color: #BD4226;
+  color: #bd4226;
 }
 
 .twitter {
   width: 32px;
   height: 32px;
   border-radius: 300px;
-  background-color: #59C0FD;
+  background-color: #59c0fd;
   margin-right: 5px;
 }
 .twitter a {
@@ -552,7 +552,7 @@ a:hover, a:active {
   padding: 9px;
 }
 .twitter a:hover {
-  color: #4B9ECE;
+  color: #4b9ece;
 }
 
 /* about */
@@ -693,7 +693,7 @@ a.btn {
   padding: 0.5em 1.25em;
   outline: 0;
   color: #fff;
-  background: #3CBD10;
+  background: #3cbd10;
   font-size: 14px;
   text-align: center;
   text-decoration: none;
@@ -716,8 +716,6 @@ a.btn {
   text-align: center;
   padding-top: 50px;
 }
-
-
 
 @media screen and (max-width: 960px) {
   .sidebar {
@@ -759,7 +757,6 @@ a.btn {
     display: grid;
   }
 }
-
 
 /* Medium zoom */
 .medium-zoom-overlay {
@@ -803,4 +800,166 @@ a.btn {
   cursor: pointer;
   cursor: zoom-out;
   will-change: transform;
+}
+
+/* Share buttons styles */
+.resp-sharing-button__link,
+.resp-sharing-button__icon {
+  display: inline-block;
+}
+
+.resp-sharing-button__link {
+  text-decoration: none;
+  color: #fff;
+  margin: 0.5em;
+}
+
+.resp-sharing-button {
+  border-radius: 5px;
+  transition: 25ms ease-out;
+  padding: 0.5em 0.75em;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+}
+
+.resp-sharing-button__icon svg {
+  width: 1em;
+  height: 1em;
+  margin-right: 0.4em;
+  vertical-align: top;
+}
+
+.resp-sharing-button--small svg {
+  margin: 0;
+  vertical-align: middle;
+}
+
+/* Non solid icons get a stroke */
+.resp-sharing-button__icon {
+  stroke: #fff;
+  fill: none;
+}
+
+/* Solid icons get a fill */
+.resp-sharing-button__icon--solid,
+.resp-sharing-button__icon--solidcircle {
+  fill: #fff;
+  stroke: none;
+}
+
+.resp-sharing-button--twitter {
+  background-color: #55acee;
+}
+
+.resp-sharing-button--twitter:hover {
+  background-color: #2795e9;
+}
+
+.resp-sharing-button--pinterest {
+  background-color: #bd081c;
+}
+
+.resp-sharing-button--pinterest:hover {
+  background-color: #8c0615;
+}
+
+.resp-sharing-button--facebook {
+  background-color: #3b5998;
+}
+
+.resp-sharing-button--facebook:hover {
+  background-color: #2d4373;
+}
+
+.resp-sharing-button--tumblr {
+  background-color: #35465c;
+}
+
+.resp-sharing-button--tumblr:hover {
+  background-color: #222d3c;
+}
+
+.resp-sharing-button--reddit {
+  background-color: #5f99cf;
+}
+
+.resp-sharing-button--reddit:hover {
+  background-color: #3a80c1;
+}
+
+.resp-sharing-button--google {
+  background-color: #dd4b39;
+}
+
+.resp-sharing-button--google:hover {
+  background-color: #c23321;
+}
+
+.resp-sharing-button--linkedin {
+  background-color: #0077b5;
+}
+
+.resp-sharing-button--linkedin:hover {
+  background-color: #046293;
+}
+
+.resp-sharing-button--email {
+  background-color: #777;
+}
+
+.resp-sharing-button--email:hover {
+  background-color: #5e5e5e;
+}
+
+.resp-sharing-button--xing {
+  background-color: #1a7576;
+}
+
+.resp-sharing-button--xing:hover {
+  background-color: #114c4c;
+}
+
+.resp-sharing-button--whatsapp {
+  background-color: #25d366;
+}
+
+.resp-sharing-button--whatsapp:hover {
+  background-color: #1da851;
+}
+
+.resp-sharing-button--hackernews {
+  background-color: #ff6600;
+}
+.resp-sharing-button--hackernews:hover,
+.resp-sharing-button--hackernews:focus {
+  background-color: #fb6200;
+}
+
+.resp-sharing-button--vk {
+  background-color: #507299;
+}
+
+.resp-sharing-button--vk:hover {
+  background-color: #43648c;
+}
+
+.resp-sharing-button--facebook {
+  background-color: #3b5998;
+  border-color: #3b5998;
+}
+
+.resp-sharing-button--facebook:hover,
+.resp-sharing-button--facebook:active {
+  background-color: #2d4373;
+  border-color: #2d4373;
+}
+
+.resp-sharing-button--whatsapp {
+  background-color: #25d366;
+  border-color: #25d366;
+}
+
+.resp-sharing-button--whatsapp:hover,
+.resp-sharing-button--whatsapp:active {
+  background-color: #1da851;
+  border-color: #1da851;
 }
