--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -8,7 +8,7 @@
         <i class="fa fa-sun-o"></i
         ><span class="date">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
         <i class="fa fa-clock-o"></i
-        ><span class="reading-time">{{ .ReadingTime }}-minute read</span>
+        ><span class="reading-time">{{ .ReadingTime }}-minutos de leitura</span>
       </div>
       {{ end }}
     </div>
