--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -26,9 +26,10 @@
 
   <div>
     <!-- Sharingbutton Facebook -->
+    {{ $url := printf "%s" .URL | absLangURL }}
     <a
       class="resp-sharing-button__link"
-      href="//www.facebook.com/sharer/sharer.php?u={{ .Permalink }}"
+      href="//www.facebook.com/sharer/sharer.php?u={{ $url }}"
       target="_blank"
       title="Share on Facebook"
       rel="noreferrer"
@@ -56,10 +57,11 @@
     <!-- Sharingbutton LinkedIn -->
     <a
       class="resp-sharing-button__link"
-      href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http%3A%2F%2Fsharingbuttons.io&amp;title=Super%20fast%20and%20easy%20Social%20Media%20Sharing%20Buttons.%20No%20JavaScript.%20No%20tracking.&amp;summary=Super%20fast%20and%20easy%20Social%20Media%20Sharing%20Buttons.%20No%20JavaScript.%20No%20tracking.&amp;source=http%3A%2F%2Fsharingbuttons.io"
+      href="//www.linkedin.com/shareArticle?url={{ .Permalink }}&amp;title={{ .Title }}"
       target="_blank"
-      rel="noopener"
-      aria-label=""
+      title="Share on LinkedIn"
+      rel="noreferrer"
+      aria-label="share article on linkedin"
     >
       <div
         class="resp-sharing-button resp-sharing-button--linkedin resp-sharing-button--small"
