added link to whatsapp share

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -82,7 +82,8 @@
     <!-- Sharingbutton WhatsApp -->
     <a
       class="resp-sharing-button__link"
-      href="whatsapp://send?text=Super%20fast%20and%20easy%20Social%20Media%20Sharing%20Buttons.%20No%20JavaScript.%20No%20tracking.%20http%3A%2F%2Fsharingbuttons.io"
+      href="https://api.whatsapp.com/send?text={{ .Permalink }}"
+      data-action="share/whatsapp/share"
       target="_blank"
       rel="noopener"
       aria-label=""
